--- a/index.html
+++ b/index.html
@@ -172,25 +172,25 @@
                             <li>
                                 <a href="#">
                                     <span><img src="./images/recrie.png" alt="인사제도"></span>
-                                    <span>인사제도</span>
+                                    <em>인사제도</em>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <span><img src="./images/trend.png" alt="주가정보"></span>
-                                    <span>주가정보</span>
+                                    <em>주가정보</em>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <span><img src="./images/iran (1).png" alt="IR자료"></span>
-                                    <span>IR자료</span>
+                                    <em>IR자료</em>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <span><img src="./images/notice.png" alt="공시정보"></span>
-                                    <span>공시정보</span>
+                                    <em>공시정보</em>
                                 </a>
                             </li>
                         </ul>
